# barsxml

./: .gitignore  CHANGES.md  LICENSE  README.md  Readme.md  TODO.md  posgresql_podman.md  pyproject.toml  pytest.ini  pytest_demo.ini  pytest_hokuto.ini  requirements.txt  setup.cfg  setup.py  start_pod.sh
barsxml/: .gitignore
barsxml.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
barsxml/config/: dbfxml.py  xmltype.py
barsxml/sql/: sqlbase.py  sqldbf.py  sqlpostgres.py
barsxml/tests/: .gitignore  test_dbf_provider.py  test_pg_app.py  test_xml_app.py  xml_dbf_config.py  xml_pg_config.py
barsxml/xmlmix/: maketags.py
barsxml/xmlprod/: barsxml.py  utils.py  xmlrecords.py
barsxml/xmlstruct/: hdrstruct.py  hmstruct.py  lmstruct.py  pmstruct.py
config/: .gitignore  dbf_xml.py  xml_type.py
path_class/: thisPath.py
sql_class/: dbf_config.py  sql_base.py  sql_dbf.py
src/barsxml/config/: __init__.py  dbfxml.py  pgrestxml.py  pgxml.py  postgresxml.py  xmltype.py
src/barsxml/path/: thispath.py
src/barsxml/sql/: SELECT_RECORD.sql  __init__.py  sqlbase.py  sqldbf.py  sqlpgrest.py  sqlpostgres.py
src/barsxml/tests/: run_tests.sh  test_dbf_provider.py  test_pg_app.py  test_pgrest_provider.py  xml_pg_config.py
src/barsxml/xmlmix/: maketags.py
src/barsxml/xmlproc/: configx.py  datadict.py  hdrdict.py  utils.py  xmlsigner.py  xmlwriter.py
tests/: dbf_config.py  test_dbf_provider.py  test_xml_app.py  xml_dbf_config.py  xml_dbf_travma_config.py
xml_class/: barsXml.py  hmHdrFile.py  lmHdrFile.py  mixTags.py  pmHdrFile.py  utils.py  xmlRecords.py
(+22 files in other folders)
