[metadata]
name = barsxml
version = 0.1.11
author = SLikhachev
author_email = polaughing@yahoo.com
description = make BARS XML packet from SQL
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SLikhachev/barsxml
project_urls =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    pyodbc >= 4.0.18
    psycopg2 >= 2.7.3.2

[options.packages.find]
where = src
exclude = barsxml.tests
